@@ -1,3 +1,10 @@
+2008-02-07  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/nm-connection-list.c
+	  src/connection-editor/nm-connection-list.h
+		- Add an icon column to the list view showing what connection type each
+			connection is
+
 2008-02-05  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet.c
